--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ body{
     cursor: pointer;
     transition: .3s;
 }
-.download-btn{
+.download-btn:hover{
     background: #5a0244;
     box-shadow: none;
 }
